# sauber-devpi

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
.github/workflows/: railway-deploy.yml
scripts/: devpi_admin.sh  devpi_local_admin.sh  devpi_local_kaosmaps.sh  devpi_railway_admin.sh  devpi_railway_kaosmaps.sh  docker_build.sh  docker_run.sh  docker_run_noenvvars.sh  export_env.sh
scripts/dev/: railway_deploy.sh  railway_setup.sh
src/sauber_devpi/: docker_setup.py  main.py  utils.py
